Fixed title spacing

--- a/style.css
+++ b/style.css
@@ -255,6 +255,7 @@
 		padding-left:0.35em;
 		padding-bottom:0.1em;
 		padding-top:0.8em;
+		margin-bottom:0.25em;
 	}
 
 	.body	{
